# simple_conf_parser

./: README.md  bench.py  conf_parser.py  pyproject.toml  test.py  tokenizer.py
examples/: bench.py  test.py  test.sscl
src/sscl/: __init__.py  dumper.py  parser.py  sscl.py  tokenizer.py
