[project]
name = "sscl"
version = "0.0.1"
authors = [
  { name="silphendio"},
]
description = "Parser for sscl, a simple confguration language"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

keywords = ["configuration", "language", "json", "serialization"]  # Optional

[project.urls]
Homepage = "https://github.com/silphendio/sscl"


[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
